--- a/Application/Home/View/User/usermng.html
+++ b/Application/Home/View/User/usermng.html
@@ -1,10 +1,7 @@
-<script src="__PUBLIC__/js/user.js"></script>
+<script src="__PUBLIC__/js/userlist.js"></script>
 </head>
 <body>
 
 
-
-<table id="crud"></table>
-<div id="pcrud"></div>
-
-<script src="__PUBLIC__/js/celledit.js" type="text/javascript"> </script>
+<table id="userlist"></table>
+<div id="puserlist"></div>
