--- a/Application/Home/View/AllInOne/allInOne.html
+++ b/Application/Home/View/AllInOne/allInOne.html
@@ -2,34 +2,81 @@
     $(document).ready(function () {
         $('body').layout({ applyDemoStyles: true });
 
-        var i=2;
-        $("#add_pro_tab").button().click(function(event){
-            //alert("afadf");
-            maintab.tabs('add',"#tabs-" + i, "test");
-            i++;
-            //$(st,"#tabs").load(treedata.url);
-        });
-        var maintab =jQuery('#tabs','#RightPane').tabs({
-             add: function(e, ui) {
+        var maintab =jQuery('#tabs').tabs({
+            add: function(e, ui) {
                 // append close thingy
-                 $(ui .tab).parents('li:first')
-                     .append('<span class="ui-tabs-close ui-icon ui-icon-close" title="Close Tab"></span>')
-                     .find('span.ui-tabs-close')
-                     .click(function() {
-                        maintab.tabs('remove', $('li', maintab).index($(this).parents('li:first')[0]));
-                 });
-                 // select just added tab
+                console.log(ui.tab);
+                console.log(ui.panel);
+                console.log(ui.index);
+                console.log(ui.panel.id);
+                console.log($(ui.tab).parents('li:first'));
+                console.log($(ui.tab).parents('li:first')[0]);
+                $(ui.tab).parents('li:first')
+                        .append('<span class="ui-tabs-close ui-icon ui-icon-close" title="Close Tab"></span>')
+                        .find('span.ui-tabs-close')
+                        .click(function() {
+                            maintab.tabs('remove', $('li', maintab).index($(this).parents('li:first')[0]));
+                        });
+                // select just added tab
                 maintab.tabs('select', '#' + ui.panel.id);
-             }
-         });
+            }
+        });
+
+        if($("#west_usermng").length >= 1){
+            $("#west_usermng").button().click(function(event){
+                var st = "#t_west_usermng";
+                if($(st).html() != null ) {
+                    maintab.tabs('select',st);
+                }
+                else {
+                    maintab.tabs('add',st, "用户管理");
+                    //$(st,"#tabs").load("/index.php/Home/User/add");
+                    $(st,"#tabs").load("/index.php/Home/User/usermng");
+                }
+            });
+        }
+        //west_createproject
+        if($("#west_createproject").length >= 1){
+            $("#west_createproject").button().click(function(event){
+                var st = "#t_west_createproject";
+                if($(st).html() != null ) {
+                    maintab.tabs('select',st);
+                }
+                else {
+                    //
+                    maintab.tabs('add',st, "建立项目");
+                    //$(st,"#tabs").load("/index.php/Home/User/add");
+                    $(st,"#tabs").load("/index.php/Home/AllInOne/index/pro_id/pro_1");
+/*                    var header = document.getElementsByTagName('head')[0];
+                    var script = document.createElement('script');
+                    script.type = 'text/javascript';
+                    script.src = "__PUBLIC__/js/AllInOne.js";
+                    header.appendChild(script);*/
+                }
+            });
+        }
+        if($("#west_userlogout").length >= 1){
+            $("#west_userlogout").button().click(function(event){
+                var st = "#t_west_userlogout";
+                if($(st).html() != null ) {
+                    maintab.tabs('select',st);
+                }
+                else {
+                    //console.log(maintab);
+                    console.log(maintab.tabs);
+                    maintab.tabs("add",st, "注销");
+                    //$(st,"#tabs").load("/index.php/Home/User/add");
+                    //$(st,"#tabs").load("/index.php/Home/User/usermng");
+                    $(st,"#tabs").load("/index.php/Home/AllInOne/index/pro_id/pro_1");
+/*                    var header = document.getElementsByTagName('head')[0];
+                    var script = document.createElement('script');
+                    script.type = 'text/javascript';
+                    script.src = "__PUBLIC__/js/AllInOne.js";
+                    header.appendChild(script);*/
+                }
+            });
+        }
     });
-
-
-
-
-
-
-
 </script>
 </head>
 <body>
@@ -49,8 +96,7 @@
 <div class="ui-layout-south">South</div>
 <div class="ui-layout-east">East</div>
 <div class="ui-layout-west">
-    West
-    <span id="add_pro_tab">add pro tab</span>
+    <include file="west" />
 </div>
 
 
