--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -2,9 +2,42 @@
 <head>
     <meta charset="utf-8">
     <title></title>
+    <!--jquery  ui custom -->
+    <script src="__PUBLIC__/js/Lib/jquery-1.11.0.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/jquery-migrate-1.2.1.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/jquery-ui-1.8.24.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/jquery.layout-latest.js" type="text/javascript"></script>
+
+    <!--jqgrid i18n cn lib-->
+    <script src="__PUBLIC__/js/Lib/jqGrid/i18n/grid.locale-cn.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        $.jgrid.no_legacy_api = true;
+        $.jgrid.useJSON = true;
+    </script>
+    <!--jqgrid use ui lib-->
+    <script src="__PUBLIC__/js/Lib/jqGrid/jquery.jqGrid.min.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/jqGrid/plugins/jquery.tablednd.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/jqGrid/plugins/jquery.contextmenu.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/jqGrid/plugins/ui.multiselect.js" type="text/javascript"></script>
+
+    <!--jquery validate lib-->
+    <script src="__PUBLIC__/js/Lib/validate/jquery.validate.js" type="text/javascript"></script>
+   <!-- <script src="__PUBLIC__/js/Lib/validate/additional-methods.js" type="text/javascript"></script>-->
+    <script src="__PUBLIC__/js/Lib/validate/messages_zh.js" type="text/javascript"></script>
+    <!--jquery lib-->
+    <script src="__PUBLIC__/js/Lib/jquery.form.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/dateutil.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        $.jgrid.no_legacy_api = true;
+        $.jgrid.useJSON = true;
+    </script>
+
+
     <link rel="stylesheet" href="__PUBLIC__/style/base.css" type="text/css" />
     <!--jquery  ui custom  css -->
-    <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/redmond/jquery-ui-1.8.2.custom.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/redmond/jquery-ui.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/ui.jqgrid.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/ui.multiselect.css" />
 
@@ -22,41 +55,6 @@
         .ui-layout-west .ui-jqgrid tr.jqgrow td { border-bottom: 0px none;}
         .ui-datepicker {z-index:1200;}
     </style>
-
-    <!--jquery  ui custom -->
-    <script src="__PUBLIC__/js/Lib/jquery-1.11.0.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/jquery-migrate-1.2.1.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/Jqgrid/jquery-ui-1.8.2.custom.min.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/jquery.layout-latest.js" type="text/javascript"></script>
-
-    <!--jqgrid i18n cn lib-->
-    <script src="__PUBLIC__/js/Lib/Jqgrid/js/i18n/grid.locale-cn.js" type="text/javascript"></script>
-
-    <script type="text/javascript">
-        $.jgrid.no_legacy_api = true;
-        $.jgrid.useJSON = true;
-    </script>
-    <!--jqgrid use ui lib-->
-    <script src="__PUBLIC__/js/Lib/Jqgrid/jquery.jqGrid.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/Jqgrid/plugins/jquery.tablednd.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/Jqgrid/plugins/jquery.contextmenu.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/Jqgrid/plugins/ui.multiselect.js" type="text/javascript"></script>
-
-    <!--jquery validate lib-->
-    <script src="__PUBLIC__/js/Lib/validate/jquery.validate.js" type="text/javascript"></script>
-   <!-- <script src="__PUBLIC__/js/Lib/validate/additional-methods.js" type="text/javascript"></script>-->
-    <script src="__PUBLIC__/js/Lib/validate/jquery.validate.messages_cn.js" type="text/javascript"></script>
-    <!--jquery lib-->
-    <script src="__PUBLIC__/js/Lib/jquery.form.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/dateutil.js" type="text/javascript"></script>
-
-    <script type="text/javascript">
-        $.jgrid.no_legacy_api = true;
-        $.jgrid.useJSON = true;
-    </script>
-
-
-
 
 
 
