--- a/Application/Home/View/AllInOne/west.html
+++ b/Application/Home/View/AllInOne/west.html
@@ -4,7 +4,7 @@
 </eq>
 
 <eq name="department" value="sc">
-    <span id="west_createproject">建立项目</span>
+    <span id="west_project_mng">项目管理</span>
     <br>
 </eq>
 <span id="west_userlogout">注销</span>
