--- a/Application/Home/View/User/usermng.html
+++ b/Application/Home/View/User/usermng.html
@@ -1,4 +1,4 @@
-<script src="__PUBLIC__/js/userlist.js"></script>
+<script src="__PUBLIC__/js/usermng.js"></script>
 
 <table id="userlist"></table>
 <div id="puserlist"></div>
