--- a/Application/Home/View/User/login.html
+++ b/Application/Home/View/User/login.html
@@ -1,4 +1,24 @@
-<script src="__PUBLIC__/js/user.js"></script>
+<html lang="zh">
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <!--jquery  ui custom -->
+    <script src="__PUBLIC__/js/Lib/jquery-1.11.0.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/jquery-migrate-1.2.1.js" type="text/javascript"></script>
+    <!--jquery validate lib-->
+    <script src="__PUBLIC__/js/Lib/validate/jquery.validate.js" type="text/javascript"></script>
+    <!-- <script src="__PUBLIC__/js/Lib/validate/additional-methods.js" type="text/javascript"></script>-->
+    <script src="__PUBLIC__/js/Lib/validate/messages_zh.js" type="text/javascript"></script>
+    <!--jquery lib-->
+    <script src="__PUBLIC__/js/Lib/jquery.form.js" type="text/javascript"></script>
+    //
+    <!--<script src="__PUBLIC__/js/Lib/leanmodal/jquery.leanModal.min.js" type="text/javascript"></script>-->
+    <script src="__PUBLIC__/js/Lib/simplemodal/jquery.simplemodal-1.4.4.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/user.js"></script>
+
+
+<!--    <link type='text/css' href='__PUBLIC__/style/simplemodal/basic.css' rel='stylesheet' media='screen' />-->
+    <link rel="stylesheet" href="__PUBLIC__/style/base.css" type="text/css" />
 </head>
 <body>
 
@@ -16,4 +36,17 @@
         <INPUT type="submit" value="提交">
     </FORM>
 </div>
+
+
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#userLoginMain").modal();
+    });
+</script>
+
+<body>
+</html>
+
+
 
