--- a/Application/Home/View/AllInOne/west.html
+++ b/Application/Home/View/AllInOne/west.html
@@ -2,14 +2,13 @@
     <span id="west_usermng">用户管理</span>
     <br>
 </eq>
-
 <eq name="department" value="sc">
     <span id="west_project_mng">项目管理</span>
     <br>
 </eq>
+<span id="west_project_search">项目查询</span>
+<br>
 <span id="west_userlogout">注销</span>
 <br>
-userflag={$userflag}
-<a href="/index.php/Home/AllInOne/index/pro_id/pro_2" target="_blank"> pro_2 </a>
-<a href="/index.php/Home/AllInOne/index/pro_id/pro_1" target="_blank"> pro_1 </a>
+
 
