--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -28,6 +28,7 @@
     <script src="__PUBLIC__/js/Lib/validate/messages_zh.js" type="text/javascript"></script>
     <!--jquery lib-->
     <script src="__PUBLIC__/js/Lib/jquery.form.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/ztree/jquery.ztree.all-3.5.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/dateutil.js" type="text/javascript"></script>
 
     <script type="text/javascript">
@@ -35,14 +36,13 @@
         $.jgrid.useJSON = true;
     </script>
 
-
     <link rel="stylesheet" href="__PUBLIC__/style/base.css" type="text/css" />
     <!--jquery  ui custom  css -->
     <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/redmond_1.8.24/jquery-ui.css" />
     <!--<link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/redmond/jquery-ui-1.10.4.custom.css" />-->
     <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/ui.jqgrid.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/ui.multiselect.css" />
-
+    <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/zTreeStyle/zTreeStyle.css" />
     <style>
         html, body {
             margin: 0;			/* Remove body margin/padding */
