jqery ui 1.10.4  tabs ok.

--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -1,4 +1,6 @@
 <script src="__PUBLIC__/js/allmodules.js"></script>
+<script src="__PUBLIC__/js/Lib/darktooltip/jquery.darktooltip.min.js"></script>
+<link rel="stylesheet" type="text/css"  href="__PUBLIC__/style/darktooltip/darktooltip.css" />
 
 
 <div id="AllInOneMain">
@@ -16,6 +18,8 @@
     <br/>
 </div>
 
+<span id="lock">锁定</span><span id="unlock">解锁</span>
+<br>
 <div id="AllInOneDetail">
     <include file="AllInOne/module_xmjbxx" />
     <include file="AllInOne/module_xmscfx" />
