--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -5,8 +5,8 @@
     <!--jquery  ui custom -->
     <script src="__PUBLIC__/js/Lib/jquery-1.11.0.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/jquery-migrate-1.2.1.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/jquery-ui-1.8.24.js" type="text/javascript"></script>
-    <!--<script src="__PUBLIC__/js/Lib/jquery-ui-1.10.4.custom.js" type="text/javascript"></script>-->
+    <!--<script src="__PUBLIC__/js/Lib/jquery-ui-1.8.24.js" type="text/javascript"></script>-->
+    <script src="__PUBLIC__/js/Lib/jquery-ui-1.10.4.custom.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/jquery.layout-latest.js" type="text/javascript"></script>
 
     <!--jqgrid i18n cn lib-->
@@ -24,7 +24,6 @@
 
     <!--jquery validate lib-->
     <script src="__PUBLIC__/js/Lib/validate/jquery.validate.js" type="text/javascript"></script>
-   <!-- <script src="__PUBLIC__/js/Lib/validate/additional-methods.js" type="text/javascript"></script>-->
     <script src="__PUBLIC__/js/Lib/validate/messages_zh.js" type="text/javascript"></script>
     <!--jquery lib-->
     <script src="__PUBLIC__/js/Lib/jquery.form.js" type="text/javascript"></script>
@@ -38,8 +37,13 @@
 
     <link rel="stylesheet" href="__PUBLIC__/style/base.css" type="text/css" />
     <!--jquery  ui custom  css -->
-    <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/redmond_1.8.24/jquery-ui.css" />
-    <!--<link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/redmond/jquery-ui-1.10.4.custom.css" />-->
+    <!--<link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/redmond_1.8.24/jquery-ui.css" />-->
+
+    <!--<link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/swanky-purse_1.10.4/jquery-ui-1.10.4.custom.css" />-->
+    <!--<link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/smoothness_1.10.4/jquery-ui-1.10.4.custom.css" />-->
+    <!--<link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/start_1.10.4/jquery-ui-1.10.4.custom.css" />-->
+    <!--<link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/le-frog_1.10.4/jquery-ui-1.10.4.custom.css" />-->
+    <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/redmond_1.10.4/jquery-ui-1.10.4.custom.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/ui.jqgrid.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/ui.multiselect.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/zTreeStyle/zTreeStyle.css" />
