--- a/Application/Home/View/AllInOne/module_xmscfx.html
+++ b/Application/Home/View/AllInOne/module_xmscfx.html
@@ -1,19 +1,5 @@
 <script type="text/javascript">
     $(document).ready(function() {
-        //
-        $("#sc_pro_trade_for_choose").change(function(event){
-            $("#sc_pro_trade").val($(this).val());
-        });
-        $("#sc_compety_company_for_choose").change(function(event){
-            $("#sc_compety_company").val($(this).val());
-        });
-        $("#sc_lb_reason_for_choose").change(function(event){
-            $("#sc_lb_reason").val($(this).val());
-        });
-        $("#sc_zb_reason_for_choose").change(function(event){
-            $("#sc_zb_reason").val($(this).val());
-        });
-        //
     });
 </script>
 <div id="module_xmscfx"  class="module">
@@ -24,23 +10,24 @@
         落标原因	来自市场部	中标原因	来自市场部-->
         <table>
             <tr>
-                <td>项目行业:<INPUT type="text" id="sc_pro_trade" name="sc_pro_trade"  jb_field="jb_single_save" />
-                    可以选择:
-                    <select id="sc_pro_trade_for_choose" name="sc_pro_trade_for_choose" jb_field="" >
+                <td>项目行业:
+                    <select id="sc_pro_trade_base" name="sc_pro_trade_base" jb_field="jb_single_save" >
                         <option value="0"  selected="selected">请选择</option>
-                        <option value="IT">IT</option>
-                        <option value="金融">金融</option>
-                        <option value="医药">医药</option>
-                        <option value="食品">食品</option>
-                        <option value="工业">工业</option>
-                        <option value="物流">物流</option>
-                        <option value="汽车">汽车</option>
-                        <option value="能源">能源</option>
-                        <option value="零售">零售</option>
-                        <option value="日用品">日用品</option>
-                        <option value="咨询">咨询</option>
+                        <option value="A">IT</option>
+                        <option value="B">金融</option>
+                        <option value="C">医药</option>
+                        <option value="D">食品</option>
+                        <option value="E">工业</option>
+                        <option value="F">物流</option>
+                        <option value="G">汽车</option>
+                        <option value="H">能源</option>
+                        <option value="I">零售</option>
+                        <option value="J">日用品</option>
+                        <option value="K">咨询</option>
                         <option value="其它">其它</option>
                     </select>
+                    <br>
+                    其它:<INPUT type="text" id="sc_pro_trade_ot" name="sc_pro_trade_ot"  jb_field="jb_single_save" />
                 </td>
                 <td>客户类别1:
                     <select id="sc_cus_t_1" name="sc_cus_t_1" jb_field="jb_single_save" >
@@ -52,18 +39,18 @@
                 </td>
             </tr>
             <tr>
-                <td>竞争对手:<INPUT type="text" id="sc_compety_company" name="sc_compety_company"  jb_field="jb_single_save" />
-                    可以选择:
-                    <select id="sc_compety_company_for_choose" name="sc_compety_company_for_choose" multiple="multiple" jb_field="" >
-                        <option value="0"  selected="selected">请选择</option>
-                        <option value="EDG">EDG</option>
-                        <option value="MOSSER">MOSSER</option>
-                        <option value="大兴施">大兴施</option>
-                        <option value="KRA">KRA</option>
-                        <option value="C&C">C&C</option>
-                        <option value="格林贝斯">格林贝斯</option>
-                        <option value="其它">其它</option>
+                <td>竞争对手:
+                    <select id="sc_compety_company_base" name="sc_compety_company_base" multiple="multiple" jb_field="multiple" >
+                        <option value="A">EDG</option>
+                        <option value="B">MOSSER</option>
+                        <option value="C">大兴施</option>
+                        <option value="D">KRA</option>
+                        <option value="E">C&C</option>
+                        <option value="F">格林贝斯</option>
                     </select>
+                    <br>
+                    其它:<INPUT type="text" id="sc_compety_company_ot" name="sc_compety_company_ot"  jb_field="" />
+                    <span id="sc_compety_company" jb_field="jb_select_save" >...</span>
                 </td>
                 <td>中标策略分析会:
                     <select id="sc_tbcl_fxh" name="sc_tbcl_fxh"  jb_field="jb_select_save" >
@@ -74,28 +61,32 @@
                 </td>
             </tr>
             <tr>
-                <td>落标原因:<textarea id="sc_lb_reason" name="sc_lb_reason"  jb_field="jb_single_save" ></textarea>
-                    可以选择:
-                    <select id="sc_lb_reason_for_choose" name="sc_lb_reason_for_choose" multiple="multiple" jb_field="" >
-                        <option value="以前工程做的不好">以前工程做的不好</option>
-                        <option value="装饰设计原因">装饰设计原因</option>
-                        <option value="机电方案原因">机电方案原因</option>
-                        <option value="客户关系原因">客户关系原因</option>
-                        <option value="报价原因">报价原因</option>
-                        <option value="讲标原因">讲标原因</option>
-                        <option value="客户取消项目">客户取消项目</option>
+                <td>落标原因:
+                    <select id="sc_lb_reason_base" name="sc_lb_reason_base" multiple="multiple" jb_field="multiple" >
+                        <option value="A">以前工程做的不好</option>
+                        <option value="B">装饰设计原因</option>
+                        <option value="C">机电方案原因</option>
+                        <option value="D">客户关系原因</option>
+                        <option value="E">报价原因</option>
+                        <option value="F">讲标原因</option>
+                        <option value="G">客户取消项目</option>
                     </select>
+                    <br>
+                    其它:<textarea id="sc_lb_reason_ot" name="sc_lb_reason_ot"  jb_field="" ></textarea>
+                    <a id="sc_lb_reason" jb_field="jb_select_save" >...</a>
                 </td>
-                <td>中标原因:<textarea id="sc_zb_reason" name="sc_zb_reason"  row="2" col="100" jb_field="jb_single_save" ></textarea>
-                    可以选择:
-                    <select id="sc_zb_reason_for_choose" name="sc_zb_reason_for_choose" multiple="multiple" jb_field="" >
-                        <option value="以前工程客户满意度高">以前工程客户满意度高</option>
-                        <option value="装饰设计原因">装饰设计原因</option>
-                        <option value="机电方案原因">机电方案原因</option>
-                        <option value="客户关系原因">客户关系原因</option>
-                        <option value="报价原因">报价原因</option>
-                        <option value="讲标原因">讲标原因</option>
+                <td>中标原因:
+                    <select id="sc_zb_reason_base" name="sc_zb_reason_base" multiple="multiple" jb_field="multiple" >
+                        <option value="A">以前工程客户满意度高</option>
+                        <option value="B">装饰设计原因</option>
+                        <option value="C">机电方案原因</option>
+                        <option value="D">客户关系原因</option>
+                        <option value="E">报价原因</option>
+                        <option value="F">讲标原因</option>
                     </select>
+                    <br>
+                    其它:<textarea id="sc_zb_reason_ot" name="sc_zb_reason_ot"  jb_field="" ></textarea>
+                    <a id="sc_zb_reason" jb_field="jb_select_save" >...</a>
                 </td>
             </tr>
         </table>
