add css ,but will hange next

--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -8,7 +8,12 @@
 <script src="__PUBLIC__/js/Lib/jquery-ui-multiselect-widget/src/jquery.multiselect.js"></script>
 <script src="__PUBLIC__/js/Lib/jquery-ui-multiselect-widget/i18n/jquery.multiselect.zh-cn.js"></script>
 <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/jquery-ui-multiselect-widget/jquery.multiselect.css" />
-
+<style>
+    .module table{border-collapse:collapse;border-spacing:0;border-left:1px solid #888;border-top:1px solid #888;background:#efefef;}
+    .module th,td{border-right:1px solid #888;border-bottom:1px solid #888;padding:5px 15px;}
+    .module th{font-weight:bold;background:#ccc;}
+</style>
+        
 <div id="AllInOneMain">
     <INPUT type="text" id="user_id" name="user_id" value="{$user_id}" >
     <br/>
