--- a/Application/Home/View/AllInOne/module_xmcbgl.html
+++ b/Application/Home/View/AllInOne/module_xmcbgl.html
@@ -1,9 +1,203 @@
 <div id="module_xmcbgl" class="module">
     <h3><a href="#">项目成本管理</a></h3>
+
     <div>
-        投标毛利率：<input type="text"  id="ys_tb_mll" name="ys_tb_mll" jb_field="jb_single_save" /><br/>
-
-        电气客户VO：<input type="text"  id="ys_dq_vo" name="ys_dq_vo" jb_field="jb_multi_save" /><br/>
-
+        <table>
+            <tr>
+                <td>项目财务编号：</td>
+                <td><input type="text" id="ys_cw_bh" name="ys_cw_bh" jb_field="jb_single_save"/></td>
+                <td>合同金额：</td>
+                <td><input type="text" id="ys_hetong_amt" name="ys_hetong_amt" jb_field="jb_single_save"/></td>
+                <td>合同结算总金额：</td>
+                <td><input type="text" id="ys_hetong_js_amt" name="ys_hetong_js_amt" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>投标毛利率：</td>
+                <td><input type="text" id="ys_tb_mll" name="ys_tb_mll" jb_field="jb_single_save"/></td>
+                <td>开工毛利率：</td>
+                <td><input type="text" id="ys_kg_mlldouble" name="ys_tb_mll" jb_field="jb_single_save"/></td>
+                <td>实际毛利率：</td>
+                <td><input type="text" id="ys_sj_mlldouble" name="ys_sj_mlldouble" jb_field="jb_single_save"/></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>&nbsp;</td>
+                <td style="width:50px;">&nbsp;</td>
+                <td>对外报价</td>
+                <td>客户VO</td>
+                <td>内控金额</td>
+                <td>开工毛利率</td>
+                <td>实际成本</td>
+                <td>实际成本变化
+                <td>实际毛利率</td>
+                <td>说明</td>
+            </tr>
+            <tr>
+                <td rowspan=10>分包：</td>
+                <td>装修</td>
+                <td><input type="text" id="ys_zx_dwbj" name="ys_zx_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_vo" name="ys_zx_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_zx_nkje" name="ys_zx_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_kgml" name="ys_zx_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_sjcb" name="ys_zx_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_sjcbbh" name="ys_zx_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_sjml" name="ys_zx_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_sm" name="ys_zx_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>电气</td>
+                <td><input type="text" id="ys_dq_dwbj" name="ys_dq_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_vo" name="ys_dq_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_dq_nkje" name="ys_dq_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_kgml" name="ys_dq_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_sjcb" name="ys_dq_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_sjcbbh" name="ys_dq_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_sjml" name="ys_dq_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_sm" name="ys_dq_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>空调</td>
+                <td><input type="text" id="ys_kt_dwbj" name="ys_kt_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_vo" name="ys_kt_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_kt_nkje" name="ys_kt_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_kgml" name="ys_kt_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_sjcb" name="ys_kt_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_sjcbbh" name="ys_kt_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_sjml" name="ys_kt_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_sm" name="ys_kt_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>消防</td>
+                <td><input type="text" id="ys_xf_dwbj" name="ys_xf_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_vo" name="ys_xf_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_xf_nkje" name="ys_xf_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_kgml" name="ys_xf_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_sjcb" name="ys_xf_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_sjcbbh" name="ys_xf_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_sjml" name="ys_xf_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_sm" name="ys_xf_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>给排水</td>
+                <td><input type="text" id="ys_jps_dwbj" name="ys_jps_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_jps_vo" name="ys_jps_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_jps_nkje" name="ys_jps_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_jps_kgml" name="ys_jps_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_jps_sjcb" name="ys_jps_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_jps_sjcbbh" name="ys_jps_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_jps_sjml" name="ys_jps_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_jps_sm" name="ys_jps_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>IT</td>
+                <td><input type="text" id="ys_it_dwbj" name="ys_it_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_it_vo" name="ys_it_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_it_nkje" name="ys_it_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_it_kgml" name="ys_it_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_it_sjcb" name="ys_it_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_it_sjcbbh" name="ys_it_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_it_sjml" name="ys_it_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_it_sm" name="ys_it_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>SEC</td>
+                <td><input type="text" id="ys_sec_dwbj" name="ys_sec_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sec_vo" name="ys_sec_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_sec_nkje" name="ys_sec_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sec_kgml" name="ys_sec_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sec_sjcb" name="ys_sec_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sec_sjcbbh" name="ys_sec_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sec_sjml" name="ys_sec_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sec_sm" name="ys_sec_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>AV</td>
+                <td><input type="text" id="ys_av_dwbj" name="ys_av_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_av_vo" name="ys_av_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_av_nkje" name="ys_av_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_av_kgml" name="ys_av_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_av_sjcb" name="ys_av_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_av_sjcbbh" name="ys_av_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_av_sjml" name="ys_av_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_av_sm" name="ys_av_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td colspan="9">&nbsp;</td>
+            </tr>
+            <tr>
+                <td><h3>小计：</h3></td>
+                <td><input type="text" id="ys_dwbj" name="ys_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_vo" name="ys_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_nkje" name="ys_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kgml" name="ys_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sjcb" name="ys_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sjcbbh" name="ys_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sjml" name="ys_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sm" name="ys_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td colspan="9">&nbsp;</td>
+            </tr>
+            <tr>
+                <td rowspan=6>采购：</td>
+                <td>装修材料采购</td>
+                <td><input type="text" id="ys_zx_dwbj" name="ys_zx_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_vo" name="ys_zx_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_zx_nkje" name="ys_zx_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_kgml" name="ys_zx_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_sjcb" name="ys_zx_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_sjcbbh" name="ys_zx_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_sjml" name="ys_zx_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_zx_sm" name="ys_zx_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>机电设备采购</td>
+                <td><input type="text" id="ys_dq_dwbj" name="ys_dq_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_vo" name="ys_dq_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_dq_nkje" name="ys_dq_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_kgml" name="ys_dq_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_sjcb" name="ys_dq_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_sjcbbh" name="ys_dq_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_sjml" name="ys_dq_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_dq_sm" name="ys_dq_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>工厂库存及零星材料采购总金额</td>
+                <td><input type="text" id="ys_kt_dwbj" name="ys_kt_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_vo" name="ys_kt_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_kt_nkje" name="ys_kt_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_kgml" name="ys_kt_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_sjcb" name="ys_kt_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_sjcbbh" name="ys_kt_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_sjml" name="ys_kt_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kt_sm" name="ys_kt_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td>工厂人工费</td>
+                <td><input type="text" id="ys_xf_dwbj" name="ys_xf_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_vo" name="ys_xf_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_xf_nkje" name="ys_xf_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_kgml" name="ys_xf_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_sjcb" name="ys_xf_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_sjcbbh" name="ys_xf_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_sjml" name="ys_xf_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_xf_sm" name="ys_xf_sm" jb_field="jb_single_save"/></td>
+            </tr>
+            <tr>
+                <td colspan="9">&nbsp;</td>
+            </tr>
+            <tr>
+                <td><h3>小计：</h3></td>
+                <td><input type="text" id="ys_dwbj" name="ys_dwbj" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_vo" name="ys_vo" jb_field="jb_multi_save"/></td>
+                <td><input type="text" id="ys_nkje" name="ys_nkje" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_kgml" name="ys_kgml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sjcb" name="ys_sjcb" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sjcbbh" name="ys_sjcbbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sjml" name="ys_sjml" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ys_sm" name="ys_sm" jb_field="jb_single_save"/></td>
+            </tr>
+        </table>
     </div>
 </div>
