--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title></title>
     <!--jquery  ui custom -->
     <script src="__PUBLIC__/js/Lib/jquery-1.11.0.js" type="text/javascript"></script>
@@ -29,7 +30,8 @@
     <!--jquery lib-->
     <script src="__PUBLIC__/js/Lib/jquery.form.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/ztree/jquery.ztree.all-3.5.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/dateutil.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/textareaCounter/jquery.textareaCounter.plugin.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/Lib/elastic/jquery.elastic.source.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/jquery.selfutil.js" type="text/javascript"></script>
     <script type="text/javascript">
         $.jgrid.no_legacy_api = true;
@@ -50,18 +52,36 @@
     <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/jqgrid/ui.multiselect.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/zTreeStyle/zTreeStyle.css" />
     <style>
-        html, body {
-            margin: 0;			/* Remove body margin/padding */
+/*        html, body {
+            margin: 0;			 Remove body margin/padding
             padding: 0;
-            overflow: hidden;	/* Remove scroll bars on browser window */
+            overflow: hidden;	 Remove scroll bars on browser window
             font-size: 75%;
-        }
-        .ui-tabs-nav li {position: relative;}
+        }*/
+/*        .ui-tabs-nav li {position: relative;}
         .ui-tabs-selected a span {padding-right: 10px;}
         .ui-tabs-close {display: none;position: absolute;top: 3px;right: 0px;z-index: 800;width: 16px;height: 14px;font-size: 10px; font-style: normal;cursor: pointer;}
         .ui-tabs-selected .ui-tabs-close {display: block;}
         .ui-layout-west .ui-jqgrid tr.jqgrow td { border-bottom: 0px none;}
-        .ui-datepicker {z-index:1200;}
+        .ui-datepicker {z-index:1200;}*/
+.overview {
+    background: #FFEC9D;
+    padding: 10px;
+    width: 90%;
+    border: 1px solid #CCCCCC;
+}
+.originalTextareaInfo {
+    font-size: 12px;
+    color: #000000;
+    font-family: Tahoma, sans-serif;
+    text-align: right
+}
+.warningTextareaInfo {
+    font-size: 12px;
+    color: #FF0000;
+    font-family: Tahoma, sans-serif;
+    text-align: right
+}
     </style>
 
 
